# cnvt

./: .gitignore  pyproject.toml  readme.md
cnvt/: sock.py
cnvt/ssl_tls/: extensions.py  record.py  tls_parameters.py  types.py
tests/ssl_tls/: test_extensions.py  test_tls_parameters.py  test_types.py
